# tts_spice

./: .gitattributes  README.md  build_sphinx_docs.py  index.html  pyproject.toml
.github/workflows/: run_tests_on_pr.yml
latest/: foo.html  index.html  search.html
latest/.doctrees/: foo.doctree
latest/.doctrees/api/: tts_spice.doctree
latest/_static/: documentation_options.js
latest/api/: modules.html
main/: .buildinfo  genindex.html  objects.inv
main/.doctrees/: environment.pickle  index.doctree
src/tts_spice/: furnish.py
src/tts_spice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tts_spice/test/: test_furnish.py
v0.1.1/: py-modindex.html  searchindex.js
v0.1.1/.doctrees/: environment.pickle
v0.1.1/.doctrees/api/: modules.doctree
v0.1.1/api/: tts_spice.html
