[project]
name = "tts-spice"
description = "Spice utilities and common code for TTS."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
authors = [
  { name = "shanemb", email = "shane.m.bonkowski@jpl.nasa.gov" },
  { name = "muszynsk", email = "matt.muszynski@jpl.nasa.gov" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "pytest", 
  "tomli",
  "spiceypy",
  "tts-utilities>=0.2.1,<1.0.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/NASA-JPL-Teamtools-Studio/tts_spice"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[build-system]
requires = [
  "setuptools", 
  "wheel", 
  "toml", 
  "tts-utilities>=0.2.1,<1.0.0", 
  "setuptools-scm"
  ]
build-backend = "setuptools.build_meta"
